--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <p class="mobile">070-3243-3562</p>
     <p class="mail">haiso666@gmail.com</p>
   </div>
+  <a href="./meisi_aiso3.html">リンク</a>
 </html>
