add developers skill

--- a/index2.html
+++ b/index2.html
@@ -23,23 +23,83 @@
             <p>奈良工業高等専門学校 情報工学科</p>
             <p></p>
           </div>
-          <!-- <div class="ue"></div> -->
-          <!-- <p class="text">コンテンツA</p> -->
         </section>
 
         <section class="section section-2" data-z="3">
-          <!-- <p class="text">コンテンツB</p> -->
           <div class="hidari">
-            <h1>DEVELOPER SKILLS</h1>
+            <h1 class="category-title">DEVELOPER SKILLS</h1>
             <ul>
-              <li class="">HTML, CSS, JS</li>
-              <li class="">SWIFT, JAVA</li>
-              <li class="">PYTHON, RUBY</li>
-              <li class="">C# (Unity)</li>
-              <li class="">Ruby on Rails</li>
-              <li class="">React.js</li>
-              <li class="">WordPress</li>
+              <li class="lang-name">HTML, CSS, JS</li>
+              <li class="lang-name">Python</li>
+              <li class="lang-name">Swift, Java</li>
+              <li class="lang-name">C# (Unity)</li>
+              <li class="lang-name">
+                Ruby (Ruby on Rails), React.js, WordPress
+              </li>
             </ul>
+            <table class="">
+              <tr>
+                <div class="flex-container lang-logo-table">
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/html5.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/css3.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/javascript.png"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/wordpress.svg"
+                    alt="ボタン画像１"
+                  />
+                </div>
+              </tr>
+              <tr>
+                <div class="flex-container lang-logo-table">
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/python.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/swift.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/java.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/unity.svg"
+                    alt="ボタン画像１"
+                  />
+              </tr>
+              <tr>
+                <div class="flex-container lang-logo-table">
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/react.svg"
+                    alt="ボタン画像１"
+                  />
+                  <img
+                    class="lang-logo"
+                    src="./img/logo/ruby_on_rails.svg"
+                    alt="ボタン画像１"
+                  />
+                </div>
+              </tr>
+            </table>
           </div>
           <div class="migi">
             <h1>WORKS</h1>
@@ -48,22 +108,18 @@
               <li class="">団体SNSアプリ</li>
             </ul>
           </div>
-          <!-- <div class="ue"><h1>DEVELOPER SKILLS</h1></div> -->
         </section>
         <section class="section section-3" data-z="5">
-          <!-- <p class="text">コンテンツC</p> -->
           <div class="ue"><h1>RESEARCH</h1></div>
           <div class="hidari">暗示的怒りの検出に関する研究</div>
           <div class="migi"></div>
         </section>
         <section class="section section-4" data-z="7">
-          <!-- <p class="text">コンテンツD</p> -->
           <div class="ue"><h1>PHOTO</h1></div>
           <div class="hidari"></div>
           <div class="migi">INSTAGRAM</div>
         </section>
-        <section class="section section-5" data-z="9">
-          <!-- <p class="text">コンテンツD</p> -->
+        <section class="section section-5" data-z="100">
           <div class="hidari"></div>
           <div class="migi"></div>
           <div class="ue"><h1>CONTACT</h1></div>
@@ -72,6 +128,8 @@
       <div class="michi">白い光の道</div>
     </div>
     <div id="scroll" class="scroll"></div>
+
+    
     <!-- <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
