tabletをspサイトに変更

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         });
         var tabletRedirect = UARedirector({
             cond: 'tablet',
-            url: './pc.html'
+            url: './sp.html'
         });
 
         smartPhoneRedirect.redirect();
