スマホ版8割がた完成か？

--- a/pc.html
+++ b/pc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./style2.css" />
+    <link rel="stylesheet" href="./css/style_pc.css" />
   </head>
   <body>
     <div class="base">
