main display layoutの修正

--- a/sp.html
+++ b/sp.html
@@ -19,20 +19,22 @@
     <div id="main">
       <div class="grid-container">
         <div id="display"></div>
-        <button type="button" id="PROFILE" class="">PROFILE</button>
-        <button type="button" id="RESEARCH" class="">RESEARCH</button>
-        <button type="button" id="PORTFOLIO" class="">PORTFOLIO</button>
-        <button type="button" id="SKILL" class="">SKILL</button>
-        <button type="button" id="PASTIME" class="">PASTIME</button>
-        <button type="button" id="CONTACT" class="">CONTACT ME</button>
-        <button
-          type="button"
-          id="viewmore"
-          class=""
-          onclick="location.href='#sub'"
-        >
-          VIEW MORE<br />→
-        </button>
+        <div>
+          <button type="button" id="PROFILE" class="">PROFILE</button>
+          <button type="button" id="RESEARCH" class="">RESEARCH</button>
+          <button type="button" id="PORTFOLIO" class="">PORTFOLIO</button>
+          <button type="button" id="SKILL" class="">SKILL</button>
+          <button type="button" id="PASTIME" class="">PASTIME</button>
+          <button type="button" id="CONTACT" class="">CONTACT ME</button>
+          <button
+            type="button"
+            id="viewmore"
+            class=""
+            onclick="location.href='#sub'"
+          >
+            VIEW MORE<br />→
+          </button>
+        </div>
       </div>
     </div>
 
@@ -68,6 +70,7 @@
 
         <!-- history<br/>部活などかく？ -->
       </section>
+
       <section id="research">
         <h1>RESEARCH 研究</h1>
         現在<br />
@@ -75,15 +78,23 @@
         高専時代<br />
         VRを用いた半導体教育に関する研究<br />
       </section>
+
       <section id="portfolio">
         <h1>PORTFOLIO ポートフォリオ</h1>
+        ・LINE BOT と Google Apps Scriptを用いた予約システム ・SNSアプリ
+        ・RaspberryPiとArduino(ESP-WROOM-32D)を用いたスマートロック
+        ・大富豪webアプリ ・団体HP(WordPress) ・
       </section>
+
       <section id="skill">
         <h1>SLILLS 開発スキル</h1>
       </section>
+
       <section id="pastime">
         <h1>PASTIME 趣味</h1>
+        サイクリング 風景の写真撮影 アクション映画 人と話すこと
       </section>
+
       <section id="contact">
         <h1>CONTACT 連絡</h1>
         <div class="flex-container">
@@ -98,10 +109,20 @@
             ></a>
           </div>
           <div class="icon-item">
-            <a href="https://www.instagram.com/yui.ai/" class="icon-link">
+            <a href="mailto:haiso666@gmail.com" class="icon-link">
               <i class="far fa-envelope"></i>
             </a>
           </div>
+          <div class="icon-item">
+            <a href="mailto:haiso666@gmail.com" class="icon-link">
+              <i class="far fa-envelope"></i>
+            </a>
+          </div>
+          <!-- <div class="icon-item">
+            <a href="tel:070-3243-3562" class="icon-link">
+              <i class="far fa-envelope"></i>
+            </a>
+          </div> -->
         </div>
       </section>
     </div>
