main display layoutの修正

--- a/sp.html
+++ b/sp.html
@@ -17,9 +17,9 @@
   <body>
     <!-- neumorphism design -->
     <div id="main">
-      <div class="grid-container">
+      <div style="height: 100%; width: 100%">
         <div id="display"></div>
-        <div>
+        <div class="grid-container">
           <button type="button" id="PROFILE" class="">PROFILE</button>
           <button type="button" id="RESEARCH" class="">RESEARCH</button>
           <button type="button" id="PORTFOLIO" class="">PORTFOLIO</button>
@@ -73,10 +73,10 @@
 
       <section id="research">
         <h1>RESEARCH 研究</h1>
-        現在<br />
+        <span>現在<br />
         文書中の暗示的怒りの検出に関する研究<br />
         高専時代<br />
-        VRを用いた半導体教育に関する研究<br />
+        VRを用いた半導体教育に関する研究<br /></span>
       </section>
 
       <section id="portfolio">
