箇条書きをli

--- a/sp.html
+++ b/sp.html
@@ -73,17 +73,23 @@
 
       <section id="research">
         <h1>RESEARCH 研究</h1>
-        <span>現在<br />
-        文書中の暗示的怒りの検出に関する研究<br />
-        高専時代<br />
-        VRを用いた半導体教育に関する研究<br /></span>
+        <span
+          >現在<br />
+          文書中の暗示的怒りの検出に関する研究<br />
+          高専時代<br />
+          VRを用いた半導体教育に関する研究<br
+        /></span>
       </section>
 
       <section id="portfolio">
         <h1>PORTFOLIO ポートフォリオ</h1>
-        ・LINE BOT と Google Apps Scriptを用いた予約システム ・SNSアプリ
-        ・RaspberryPiとArduino(ESP-WROOM-32D)を用いたスマートロック
-        ・大富豪webアプリ ・団体HP(WordPress) ・
+        <ul>
+          <li>LINE BOT と Google Apps Scriptを用いた予約システム</li>
+          <li>SNSアプリ</li>
+          <li>RaspberryPiとArduino(ESP-WROOM-32D)を用いたスマートロック</li>
+          <li>大富豪webアプリ</li>
+          <li>団体HP(WordPress)</li>
+        </ul>
       </section>
 
       <section id="skill">
@@ -92,7 +98,12 @@
 
       <section id="pastime">
         <h1>PASTIME 趣味</h1>
-        サイクリング 風景の写真撮影 アクション映画 人と話すこと
+        <ul>
+          <li>サイクリング</li>
+          <li>風景の写真撮影</li>
+          <li>アクション映画</li>
+          <li>人と話すこと</li>
+        </ul>
       </section>
 
       <section id="contact">
