spanうちまくり

--- a/sp.html
+++ b/sp.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>AISO, Hitoshi portfolio</title>
+    <title>(スマホ用)AISO, Hitoshi portfolio</title>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
@@ -20,19 +20,15 @@
       <div style="height: 100%; width: 100%">
         <div id="display"></div>
         <div class="grid-container">
-          <button type="button" id="PROFILE" class="">PROFILE</button>
-          <button type="button" id="RESEARCH" class="">RESEARCH</button>
-          <button type="button" id="PORTFOLIO" class="">PORTFOLIO</button>
-          <button type="button" id="SKILL" class="">SKILL</button>
-          <button type="button" id="PASTIME" class="">PASTIME</button>
-          <button type="button" id="CONTACT" class="">CONTACT ME</button>
-          <button
-            type="button"
-            id="viewmore"
-            class=""
-            onclick="location.href='#sub'"
-          >
-            VIEW MORE<br />→
+          <button type="button" id="PROFILE">PROFILE</button>
+          <button type="button" id="RESEARCH">RESEARCH</button>
+          <button type="button" id="PORTFOLIO">PORTFOLIO</button>
+          <button type="button" id="SKILL">SKILL</button>
+          <button type="button" id="PASTIME">PASTIME</button>
+          <button type="button" id="CONTACT">CONTACT ME</button>
+          <button type="button" id="viewmore" onclick="location.href='#sub'">
+            <div>VIEW MORE</div>
+            <div>→</div>
           </button>
         </div>
       </div>
@@ -41,44 +37,52 @@
     <div id="sub">
       <section id="profile">
         <h1>PROFILE プロフィール</h1>
-        <span>相曽　結（AISO, Hitoshi）</span><br />
+        <span>相曽　結（AISO, Hitoshi）</span> <br />
         <span>長岡技術科学大学　工学部　情報・経営システム工学課程　４年</span>
-        知識システム研究室
-        <br /><br />
-        education<br />
-        2022/3<br />　長岡技術科学大学 工学部 情報・経営システム工学課程 卒業<br />
-        2020/4<br />　長岡技術科学大学 工学部 情報・経営システム工学課程
-        編入学<br />
-        2020/3<br />　奈良工業高等専門学校 情報工学科 卒業<br />
-        2016/8<br />　10ヶ月間，アメリカ オハイオ州 Lakeside High
-        Schoolに交換留学<br />
-        2014/4<br />　奈良工業高等専門学校 情報工学科 入学<br />
+        <span>知識システム研究室</span> <br />
         <br />
-        activity<br />
-        2020/4 ~ 現在<br />
-        　SAIN (Startup And Innovation Nagaoka) 所属<br />
-        2017/8 ~ 2020/3<br />
-        　Returnee(帰国者)として，出国前の日本人留学生の育成を行う<br />
-        2018/4 ~ 2019/3<br />
-        　奈良工業高等専門学校　文化祭実行委員会　学科展・模擬店部長<br />
-        　奈良工業高等専門学校　寮祭　実行委員長<br />
-
-        2017/8 ~ 2019/3<br />
-        　奈良工業高等専門学校　文化祭実行委員会　学科展・模擬店部所属<br />
-        2014/4 ~ 2016/3<br />
-        　奈良工業高等専門学校　文化祭実行委員会　管理部所属<br />
+        <span>education</span> <br />
+        <span>2022/3</span> <br />
+        <span>長岡技術科学大学 工学部 情報・経営システム工学課程 卒業</span>
+        <br />
+        <span>2020/4</span> <br />
+        <span>長岡技術科学大学 工学部 情報・経営システム工学課程</span>
+        <span>編入学</span> <br />
+        <span>2020/3</span> <br />
+        <span>奈良工業高等専門学校 情報工学科 卒業</span> <br />
+        <span>2016/8</span> <br />
+        <span>10ヶ月間，アメリカ オハイオ州 Lakeside High</span>
+        <span>Schoolに交換留学</span> <br />
+        <span>2014/4</span> <br />
+        <span>奈良工業高等専門学校 情報工学科 入学</span> <br />
+        <br />
+        <span>activity</span> <br />
+        <span>2020/4 ~ 現在</span> <br />
+        <span>SAIN (Startup And Innovation Nagaoka) 所属</span> <br />
+        <span>2017/8 ~ 2020/3</span> <br />
+        <span>Returnee(帰国者)として，出国前の日本人留学生の育成を行う</span>
+        <br />
+        <span>2018/4 ~ 2019/3</span> <br />
+        <span>奈良工業高等専門学校　文化祭実行委員会　学科展・模擬店部長</span>
+        <br />
+        <span>奈良工業高等専門学校　寮祭　実行委員長</span> <br />
+        <span>2017/8 ~ 2019/3</span> <br />
+        <span
+          >奈良工業高等専門学校　文化祭実行委員会　学科展・模擬店部所属</span
+        >
+        <br />
+        <span>2014/4 ~ 2016/3</span> <br />
+        <span>奈良工業高等専門学校　文化祭実行委員会　管理部所属</span> <br />
 
         <!-- history<br/>部活などかく？ -->
       </section>
 
       <section id="research">
         <h1>RESEARCH 研究</h1>
-        <span
-          >現在<br />
-          文書中の暗示的怒りの検出に関する研究<br />
-          高専時代<br />
-          VRを用いた半導体教育に関する研究<br
-        /></span>
+        <span>現在</span> <br />
+        <span>文書中の暗示的怒りの検出に関する研究</span> <br />
+        <span>高専時代</span> <br />
+        <span>VRを用いた半導体教育に関する研究</span> <br />
       </section>
 
       <section id="portfolio">
@@ -110,18 +114,13 @@
         <h1>CONTACT 連絡</h1>
         <div class="flex-container">
           <div class="icon-item">
-            <a href="https://www.facebook.com/hitoshi.aiso/" class="icon-link"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
+            <a href="https://www.facebook.com/hitoshi.aiso/" class="icon-link">
+              <i class="fab fa-facebook-f"></i>
+            </a>
           </div>
           <div class="icon-item">
-            <a href="https://www.instagram.com/yui.ai/" class="icon-link"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </div>
-          <div class="icon-item">
-            <a href="mailto:haiso666@gmail.com" class="icon-link">
-              <i class="far fa-envelope"></i>
+            <a href="https://www.instagram.com/yui.ai/" class="icon-link">
+              <i class="fab fa-instagram"></i>
             </a>
           </div>
           <div class="icon-item">
@@ -129,11 +128,11 @@
               <i class="far fa-envelope"></i>
             </a>
           </div>
-          <!-- <div class="icon-item">
-            <a href="tel:070-3243-3562" class="icon-link">
-              <i class="far fa-envelope"></i>
+          <div class="icon-item">
+            <a href="https://github.com/yui666a/" class="icon-link">
+              <i class="fab fa-github"></i>
             </a>
-          </div> -->
+          </div>
         </div>
       </section>
     </div>
