フォーマットの修正

--- a/sp.html
+++ b/sp.html
@@ -38,10 +38,14 @@
       <section id="profile">
         <h1>PROFILE プロフィール</h1>
         <span>相曽　結（AISO, Hitoshi）</span> <br />
-        <span>長岡技術科学大学　工学部　情報・経営システム工学課程　４年</span>
+        <span
+          >長岡技術科学大学　工学部専攻　情報・経営システム工学分野　１年 (1st
+          of master degree)</span
+        >
         <span>知識システム研究室</span> <br />
         <br />
-        <span>education</span> <br />
+        <h3>education</h3>
+        <br />
         <span>2022/3</span> <br />
         <span>長岡技術科学大学 工学部 情報・経営システム工学課程 卒業</span>
         <br />
@@ -56,7 +60,8 @@
         <span>2014/4</span> <br />
         <span>奈良工業高等専門学校 情報工学科 入学</span> <br />
         <br />
-        <span>activity</span> <br />
+        <h3>activity</h3>
+        <br />
         <span>2020/4 ~ 現在</span> <br />
         <span>SAIN (Startup And Innovation Nagaoka) 所属</span> <br />
         <span>2017/8 ~ 2020/3</span> <br />
@@ -79,17 +84,32 @@
 
       <section id="research">
         <h1>RESEARCH 研究</h1>
-        <span>現在</span> <br />
-        <span>文書中の暗示的怒りの検出に関する研究</span> <br />
-        <span>高専時代</span> <br />
-        <span>VRを用いた半導体教育に関する研究</span> <br />
+        <h3>現在</h3>
+        <br />
+        <span><b>文書中の暗示的怒りの検出に関する研究</b></span> <br />
+        <span>企業におけるクレーム検出を支援するため，テキストメッセージから怒りの感情を検出する研究を推進している.
+          皮肉や遠回し等，明示的な感情語を使わずに文脈によって怒っていることを表現することを「暗示的怒り」と呼ぶ.
+          文章の感情判別は感情語を手掛りとすることが一般的であるが，暗示的怒りはこのような手法では判別できないため，文脈情報を用いる機械学習手法が提案されている.
+          しかし，現在有効な精度の検出器は発表されていない．そこで精度の向上を目指して本研究を行う．
+        </span>
+        <br />
+        <h3>高専時代</h3>
+        <br />
+        <span><b>VRを用いた半導体教育に関する研究</b></span> <br />
+        <span>日々の生活に欠かせないものとなっている半導体であるが，初学者にとって半導体の動作原理は理解が難しい．
+          半導体内部の電子の動きをVR技術を用いて確認することで学習難易度が低下すると考えた．本研究では半導体教育の支援教材の開発と検証をおこなった．
+        </span>
       </section>
 
       <section id="portfolio">
         <h1>PORTFOLIO ポートフォリオ</h1>
         <ul>
+          <li><a href="https://nagaoka-worker.jp/">NAGAOKA WORKER 公式HP</a></li>
+          <li><a href="https://github.com/yui666a/job-openings-plugin/">WordPress求人投稿プラグイン</a></li>
+          <li>新潟県不動産通知スクレイピング (秘密保持契約により詳細は非公開)</li>
+          <li>入室管理ソフト(秘密保持契約により詳細は非公開)</li>
           <li>LINE BOT と Google Apps Scriptを用いた予約システム</li>
-          <li>SNSアプリ</li>
+          <li>SNSアプリ(秘密保持契約により詳細は非公開)</li>
           <li>RaspberryPiとArduino(ESP-WROOM-32D)を用いたスマートロック</li>
           <li>大富豪webアプリ</li>
           <li>団体HP(WordPress)</li>
@@ -98,6 +118,14 @@
 
       <section id="skill">
         <h1>SLILLS 開発スキル</h1>
+        <ul>
+          <li>Git</li>
+          <li>Java</li>
+          <li>Python</li>
+          <li>PHP</li>
+          <li>HTML, CSS</li>
+          <li>javascript</li>
+        </ul>
       </section>
 
       <section id="pastime">
@@ -105,7 +133,7 @@
         <ul>
           <li>サイクリング</li>
           <li>風景の写真撮影</li>
-          <li>アクション映画</li>
+          <li>洋画のアクション映画</li>
           <li>人と話すこと</li>
         </ul>
       </section>
@@ -137,6 +165,6 @@
       </section>
     </div>
 
-    <script type="text/javascript" src="./js/test.js"></script>
+    <script type="text/javascript" src="./js/sp.js"></script>
   </body>
 </html>
