テキストの修正

--- a/sp.html
+++ b/sp.html
@@ -39,13 +39,15 @@
         <h1>PROFILE プロフィール</h1>
         <span>相曽　結（AISO, Hitoshi）</span> <br />
         <span
-          >長岡技術科学大学　工学部専攻　情報・経営システム工学分野　１年 (1st
+          >長岡技術科学大学　大学院　工学部専攻　情報・経営システム工学分野　１年 (1st
           of master degree)</span
         >
         <span>知識システム研究室</span> <br />
         <br />
         <h3>education</h3>
-        <br />
+        <span>2020/4</span> <br />
+        <span>長岡技術科学大学　大学院　工学部専攻　情報・経営システム工学分野</span>
+        <span>入学</span> <br />
         <span>2022/3</span> <br />
         <span>長岡技術科学大学 工学部 情報・経営システム工学課程 卒業</span>
         <br />
